--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 <div class="bg-white rounded-xl shadow-2xl ring-1 ring-black/5">
 <img alt="Fluxograma de rastreio" class="w-full h-auto block cursor-zoom-in" id="fluxograma-img" src="assets/img/cfs.png"/>
 </div>
-</section><div class="fixed inset-0 bg-black bg-opacity-80 flex items-center justify-center hidden z-50" id="fluxograma-modal"><img alt="Fluxograma ampliado" class="max-h-screen max-w-screen cursor-zoom-out" id="fluxograma-modal-img" src="assets/img/flowchart-en.png"/></div>
+</section><div class="fixed inset-0 bg-black bg-opacity-80 flex items-center justify-center hidden z-50" id="fluxograma-modal"><img alt="Fluxograma ampliado" class="max-h-screen max-w-screen cursor-zoom-out" id="fluxograma-modal-img" src="assets/img/flowchart-eng.png"/></div>
 <div class="mb-4">
 <div class="flex items-center justify-between mb-1">
 <p class="text-sm">Step <span x-text="step"></span> of 5</p>
@@ -223,7 +223,7 @@
 <p :class="resultTone.text" class="text-sm mt-2" x-text="result.reason"></p>
 <p class="text-xs mt-2 text-gray-600" x-show="result.label === 'Screening not recommended'">Interventions (pharmacological and non-pharmacological therapies) can be implemented and change this decision.</p>
 <div class="mt-3 p-3 bg-blue-50 border border-blue-200 rounded" x-show="result.label === 'Screening not recommended'">
-<p class="text-xs text-blue-800 mb-2 font-medium">Intervention examples:</p>
+<p class="text-xs text-blue-800 mb-2 font-medium">Exemplos de intervenções:</p>
 <div class="grid grid-cols-1 md:grid-cols-3 gap-6 md:gap-8 items-start justify-items-center text-center">
 <div class="flex flex-col items-center gap-2"><img alt="Healthy Eating" class="h-48 w-auto mx-auto" decoding="async" loading="lazy" src="assets/img/cfs.png"/><p class="text-sm font-medium text-gray-700 mt-2">Healthy Eating</p>
 </div>
