--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 </header>
 <section class="mt-4" id="fluxograma-hero">
 <div class="bg-white rounded-xl shadow-2xl ring-1 ring-black/5">
-<img alt="Fluxograma de rastreio" class="w-full h-auto block cursor-zoom-in" id="fluxograma-img" src="assets/img/cfs.png"/>
+<img alt="Fluxograma de rastreio" class="w-full h-auto block cursor-zoom-in" id="fluxograma-img" src="assets/img/flowchart-eng.png"/>
 </div>
 </section><div class="fixed inset-0 bg-black bg-opacity-80 flex items-center justify-center hidden z-50" id="fluxograma-modal"><img alt="Fluxograma ampliado" class="max-h-screen max-w-screen cursor-zoom-out" id="fluxograma-modal-img" src="assets/img/flowchart-eng.png"/></div>
 <div class="mb-4">
@@ -225,11 +225,11 @@
 <div class="mt-3 p-3 bg-blue-50 border border-blue-200 rounded" x-show="result.label === 'Screening not recommended'">
 <p class="text-xs text-blue-800 mb-2 font-medium">Exemplos de intervenções:</p>
 <div class="grid grid-cols-1 md:grid-cols-3 gap-6 md:gap-8 items-start justify-items-center text-center">
-<div class="flex flex-col items-center gap-2"><img alt="Healthy Eating" class="h-48 w-auto mx-auto" decoding="async" loading="lazy" src="assets/img/cfs.png"/><p class="text-sm font-medium text-gray-700 mt-2">Healthy Eating</p>
+<div class="flex flex-col items-center gap-2"><img alt="Healthy Eating" class="h-48 w-auto mx-auto" decoding="async" loading="lazy" src="assets/img/healthy-eating.png"/><p class="text-sm font-medium text-gray-700 mt-2">Healthy Eating</p>
 </div>
-<div class="flex flex-col items-center gap-2"><img alt="Physical Activity" class="h-48 w-auto mx-auto" decoding="async" loading="lazy" src="assets/img/cfs.png"/><p class="text-sm font-medium text-gray-700 mt-2">Physical Activity</p>
+<div class="flex flex-col items-center gap-2"><img alt="Physical Activity" class="h-48 w-auto mx-auto" decoding="async" loading="lazy" src="assets/img/physical-activity.png"/><p class="text-sm font-medium text-gray-700 mt-2">Physical Activity</p>
 </div>
-<div class="flex flex-col items-center gap-2"><img alt="Cognitive Stimulation" class="h-48 w-auto mx-auto" decoding="async" loading="lazy" src="assets/img/cfs.png"/><p class="text-sm font-medium text-gray-700 mt-2">Cognitive Stimulation</p>
+<div class="flex flex-col items-center gap-2"><img alt="Cognitive Stimulation" class="h-48 w-auto mx-auto" decoding="async" loading="lazy" src="assets/img/cognitive-stimulation.png"/><p class="text-sm font-medium text-gray-700 mt-2">Cognitive Stimulation</p>
 </div>
 </div>
 </div>
