--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 </header>
 <section class="mt-4" id="fluxograma-hero">
 <div class="bg-white rounded-xl shadow-2xl ring-1 ring-black/5">
-<img alt="Fluxograma de rastreio" class="w-full h-auto block cursor-zoom-in" id="fluxograma-img" src="assets/img/flowchart-eng.png"/>
+<img alt="Fluxograma de rastreio" class="w-full h-auto block cursor-zoom-in" id="fluxograma-img" src="assets/img/flowchart-en.png"/>
 </div>
 </section><div class="fixed inset-0 bg-black bg-opacity-80 flex items-center justify-center hidden z-50" id="fluxograma-modal"><img alt="Fluxograma ampliado" class="max-h-screen max-w-screen cursor-zoom-out" id="fluxograma-modal-img" src="assets/img/flowchart-eng.png"/></div>
 <div class="mb-4">
@@ -662,3 +662,4 @@ document.addEventListener('DOMContentLoaded', function(){
 
 </body>
 </html>
+
