--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 <div class="bg-white rounded-xl shadow-2xl ring-1 ring-black/5">
 <img alt="Fluxograma de rastreio" class="w-full h-auto block cursor-zoom-in" id="fluxograma-img" src="assets/img/flowchart-en.png"/>
 </div>
-</section><div class="fixed inset-0 bg-black bg-opacity-80 flex items-center justify-center hidden z-50" id="fluxograma-modal"><img alt="Fluxograma ampliado" class="max-h-screen max-w-screen cursor-zoom-out" id="fluxograma-modal-img" src="assets/img/flowchart-eng.png"/></div>
+</section><div class="fixed inset-0 bg-black bg-opacity-80 flex items-center justify-center hidden z-50" id="fluxograma-modal"><img alt="Fluxograma ampliado" class="max-h-screen max-w-screen cursor-zoom-out" id="fluxograma-modal-img" src="assets/img/flowchart-en.png"/></div>
 <div class="mb-4">
 <div class="flex items-center justify-between mb-1">
 <p class="text-sm">Step <span x-text="step"></span> of 5</p>
@@ -662,4 +662,5 @@ document.addEventListener('DOMContentLoaded', function(){
 
 </body>
 </html>
+
 
