--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <h1 class="text-2xl font-bold text-center uppercase">
     75+ Cancer Screener (75+CS)
   </h1>
-<div class="mt-2 text-center text-gray-700 text-sm md:text-base font-medium">SCREENING FOR BREAST, COLORECTAL AND PROSTATE CANCER</div>
+<div class="mt-2 text-center text-gray-700 text-sm md:text-base font-medium">SCREENING FOR BREAST, COLORECTAL AND PROSTATE CANCER IN 75+ YEARS OLD PATIENTS</div>
 <div class="mt-1 text-center text-gray-600 text-xs md:text-sm leading-relaxed">
 <div>
 <strong>Authors:</strong> Marianne Wolff Rezende Teixeira, MD (EPM/UNIFESP); Gisele Colleoni, MD, PhD (EPM/UNIFESP)
@@ -662,5 +662,6 @@ document.addEventListener('DOMContentLoaded', function(){
 
 </body>
 </html>
+
 
 
