--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <h1 class="text-2xl font-bold text-center uppercase">
     75+ Cancer Screener (75+CS)
   </h1>
-<div class="mt-2 text-center text-gray-700 text-sm md:text-base font-medium">SCREENING FOR BREAST, COLORECTAL AND PROSTATE CANCER IN 75+ YEARS OLD PATIENTS (MAY BE USED FOR 65+)</div>
+<div class="mt-2 text-center text-gray-700 text-sm md:text-base font-medium">SCREENING FOR BREAST, COLORECTAL AND PROSTATE CANCER IN 75+ YEARS OLD PATIENTS (MAY BE APPLIED FOR 65+)</div>
 <div class="mt-1 text-center text-gray-600 text-xs md:text-sm leading-relaxed">
 <div>
 <div class="mt-1">
@@ -36,10 +36,10 @@
 <strong>Paulista School of Medicine (EPM); Federal University of São Paulo (UNIFESP)</strong>
     </div>
 <div class="mt-1">
-<strong>Authors:</strong> Marianne Wolff Rezende Teixeira, MD (UNIFESP); Matheus de Oliveira Barros, MD (UNIFESP); Gisele Colleoni, MD, PhD (UNIFESP)
+<strong>Authors:</strong> Marianne Wolff Rezende Teixeira, MD (UNIFESP); Matheus de Oliveira Barros, MD (UNIFESP); Gisele Wally Braga Colleoni, MD, PhD (UNIFESP)
     </div>
 <div class="mt-1">
-<strong>Contributors:</strong> Maísa Braga Aguiar, MD (UNIFESP); Lia Alexandre Botelho de Paula, MD (UNIFESP), MD; Luciano Pereira Soares, PhD (Insper); Adriana Bruscato Bortoluzzo, PhD (Insper); Ana Beatriz Galhardi Di Tommaso, MD, MSc (UNIFESP); Eduardo Canteiro Cruz, MD (UNIFESP); Maysa Seabra Cendoroglo, MD, PhD (UNIFESP)
+<strong>Contributors:</strong> Maísa Braga Aguiar, MD (UNIFESP); Lia Alexandre Botelho de Paula, MD (UNIFESP); Luciano Pereira Soares, PhD (Insper); Adriana Bruscato Bortoluzzo, PhD (Insper); Ana Beatriz Galhardi Di Tommaso, MD, MSc (UNIFESP); Eduardo Canteiro Cruz, MD (UNIFESP); Maysa Seabra Cendoroglo, MD, PhD (UNIFESP)
     </div>
 </div>
 </header>
@@ -670,6 +670,7 @@ document.addEventListener('DOMContentLoaded', function(){
 
 </body>
 </html>
+
 
 
 
