--- a/index.html
+++ b/index.html
@@ -555,8 +555,8 @@
 <div style="position:absolute; inset:0; display:flex; align-items:center; justify-content:center; padding:16px;">
 <div style="position:relative; max-width:1000px; width:100%;">
 <button id="cfsLegendClose" style="position:absolute; right:-8px; top:-8px; background:#fff; border-radius:999px; padding:6px 12px; font-weight:700; box-shadow:0 2px 8px rgba(0,0,0,.2);">Close</button>
-<img alt="Clinical Frailty Scale — reference card" id="cfsLegendImg" src="assets/img/cfs.png" style="width:100%; height:auto; border-radius:8px; border:2px solid #fff; box-shadow:0 6px 24px rgba(0,0,0,.4);"/>
-<div style="margin-top:6px; text-align:center; color:#fff; font-size:12px;">Clinical Frailty Scale — reference card</div>
+<img alt="Clinical Frailty Scale image © Geriatric Medicine Research — Dalhousie University. Used with permission." id="cfsLegendImg" src="assets/img/cfs.png" style="width:100%; height:auto; border-radius:8px; border:2px solid #fff; box-shadow:0 6px 24px rgba(0,0,0,.4);"/>
+<div style="margin-top:6px; text-align:center; color:#fff; font-size:12px;">Clinical Frailty Scale image © Geriatric Medicine Research — Dalhousie University. Used with permission.</div>
 </div>
 </div>
 </div>
@@ -670,6 +670,7 @@ document.addEventListener('DOMContentLoaded', function(){
 
 </body>
 </html>
+
 
 
 
