--- a/index.html
+++ b/index.html
@@ -27,14 +27,11 @@
     75+ Cancer Screener (75+CS)
   </h1>
 <div class="mt-2 text-center text-gray-700 text-sm md:text-base font-medium">SCREENING FOR BREAST, COLORECTAL AND PROSTATE CANCER IN 75+ YEARS OLD PATIENTS (also applicable for 65+)</div>
-<div class="mt-2 text-center text-gray-700 text-sm md:text-base font-medium">Screening should be repeated annually unless progression of frailty or dementia is observed.</div>
-<div class="mt-1 text-center text-gray-500 text-xs md:text-sm leading-relaxed">
+<div class="mt-2 text-center text-gray-700 text-sm md:text-base font-medium italic">Screening should be repeated annually.</div>
+<div class="mt-1 text-center text-gray-400 text-xs md:text-sm leading-relaxed">
 <div>
 <div class="mt-1">
-<strong>Discipline of Geriatrics and Gerontology, Department of Medicine</strong>
-    </div>
-<div class="mt-1">
-<strong>Paulista School of Medicine (EPM); Federal University of São Paulo (UNIFESP)</strong>
+<strong>Discipline of Geriatrics and Gerontology, Department of Medicine. Paulista School of Medicine (EPM), Federal University of São Paulo (UNIFESP)</strong>
     </div>
 <div class="mt-1">
 <strong>Authors:</strong> Marianne Wolff Rezende Teixeira, MD (UNIFESP); Matheus de Oliveira Barros, MD (UNIFESP); Gisele Wally Braga Colleoni, MD, PhD (UNIFESP)
@@ -671,6 +668,7 @@ document.addEventListener('DOMContentLoaded', function(){
 
 </body>
 </html>
+
 
 
 
