--- a/index.html
+++ b/index.html
@@ -27,8 +27,9 @@
     75+ Cancer Screener (75+CS)
   </h1>
 <div class="mt-2 text-center text-gray-700 text-sm md:text-base font-medium">SCREENING FOR BREAST, COLORECTAL AND PROSTATE CANCER IN 75+ YEARS OLD PATIENTS (also applicable for 65+)</div>
-<div class="mt-2 text-center text-gray-700 text-sm md:text-base font-medium italic">Screening should be repeated annually.</div>
-<div class="mt-1 text-center text-gray-400 text-xs md:text-sm leading-relaxed">
+<div class="mt-2 text-center text-gray-500 text-sm md:text-base font-medium italic">Screening should be repeated annually.</div>
+    <div>
+<div class="mt-1 text-center text-gray-500 text-xs md:text-sm leading-relaxed">
 <div>
 <div class="mt-1">
 <strong>Discipline of Geriatrics and Gerontology, Department of Medicine. Paulista School of Medicine (EPM), Federal University of São Paulo (UNIFESP)</strong>
@@ -668,6 +669,7 @@ document.addEventListener('DOMContentLoaded', function(){
 
 </body>
 </html>
+
 
 
 
