--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <div class="mt-1 text-center text-gray-500 text-xs md:text-sm leading-relaxed">
 <div>
 <div class="mt-1">
-<strong>Discipline of Geriatrics and Gerontology, Department of Medicine. Paulista School of Medicine (EPM), Federal University of São Paulo (UNIFESP)</strong>
+<strong>Discipline of Geriatrics and Gerontology, Department of Medicine. Paulista School of Medicine (EPM), Federal University of São Paulo (UNIFESP), São Paulo, Brasil.</strong>
     </div>
 <div class="mt-1">
 <strong>Authors:</strong> Marianne Wolff Rezende Teixeira, MD (UNIFESP); Matheus de Oliveira Barros, MD (UNIFESP); Gisele Wally Braga Colleoni, MD, PhD (UNIFESP)
@@ -275,7 +275,7 @@
 <li>Cruz M, Covinsky K, Widera EW, Stijacic-Cenzer I, Lee SJ. Predicting 10-year mortality for older adults. <em>JAMA</em>. 2013;309(9):874-876. doi: <a class="text-blue-700 underline" href="https://doi.org/10.1001/jama.2013.1184">10.1001/jama.2013.1184</a>. PMID: 23462780; PMCID: PMC3760279.</li>
 <li>Cruz-Jentoft AJ, Bahat G, Bauer J, Boirie Y, Bruyère O, Cederholm T, Cooper C, Landi F, Rolland Y, Sayer AA, Schneider SM, Sieber CC, Topinkova E, Vandewoude M, Visser M, Zamboni M; Writing Group for the European Working Group on Sarcopenia in Older People 2 (EWGSOP2), and the Extended Group for EWGSOP2. Sarcopenia: revised European consensus on definition and diagnosis. <em>Age Ageing</em>. 2019;48(1):16-31. doi: <a href="https://doi.org/10.1093/ageing/afy169" rel="noopener" target="_blank">10.1093/ageing/afy169</a>. Erratum in: <em>Age Ageing</em>. 2019;48(4):601. doi: <a href="https://doi.org/10.1093/ageing/afz046" rel="noopener" target="_blank">10.1093/ageing/afz046</a>. PMID: 30312372; PMCID: PMC6322506.</li><li>Deardorff WJ, Barnes DE, Jeon SY, Boscardin WJ, Langa KM, Covinsky KE, Mitchell SL, Whitlock EL, Smith AK, Lee SJ. Development and External Validation of a Mortality Prediction Model for Community-Dwelling Older Adults With Dementia. <em>JAMA Intern Med</em>. 2022;182(11):1161-1170. doi: <a class="text-blue-700 underline" href="https://doi.org/10.1001/jamainternmed.2022.4326">10.1001/jamainternmed.2022.4326</a>. PMID: 36156062; PMCID: PMC9513707.</li>
 <li>Francisco PMSB, et al. Prevalência de diagnóstico e tipos de câncer em idosos: dados da Pesquisa Nacional de Saúde 2013. <em>Rev Bras Geriatr Gerontol</em>. 2020;23(2):e200023. doi: <a class="text-blue-700 underline" href="https://doi.org/10.1590/1981-22562020023.200023">10.1590/1981-22562020023.200023</a>.</li>
-<li>Fried LP, Tangen CM, Walston J, Newman AB, Hirsch C, Gottdiener J, Seeman T, Tracy R, Kop WJ, Burke G, McBurnie MA; Cardiovascular Health Study Collaborative Research Group. Frailty in older adults: evidence for a phenotype. J Gerontol A Biol Sci Med Sci. 2001 Mar;56(3):M146-56. doi: 10.1093/gerona/56.3.m146. PMID: 11253156.</li>
+<li>Fried LP, Tangen CM, Walston J, Newman AB, Hirsch C, Gottdiener J, Seeman T, Tracy R, Kop WJ, Burke G, McBurnie MA; Cardiovascular Health Study Collaborative Research Group. Frailty in older adults: evidence for a phenotype. <em>J Gerontol A Biol Sci Med Sci</em>. 2001;56(3):M146–M156. doi: <a class="text-blue-700 underline" href="https://doi.org/10.1093/gerona/56.3.m146" target="_blank" rel="noopener">10.1093/gerona/56.3.m146</a>. PMID: 11253156.</li>
 <li>INSTITUTO NACIONAL DE CÂNCER (INCA). Estimativa 2023: incidência de câncer no Brasil. 2022. Disponível em: <a class="text-blue-700 underline" href="https://www.inca.gov.br/publicacoes/livros/estimativa-2023-incidencia-de-cancer-no-brasil">inca.gov.br</a>.</li>
 <li>INCA. Detecção precoce do câncer. 2021. Disponível em: <a class="text-blue-700 underline" href="https://www.inca.gov.br/sites/ufu.sti.inca.local/files/media/document/deteccao-precoce-do-cancer.pdf">PDF</a>.</li>
 <li>Kotwal AA, Walter LC. Cancer Screening in Older Adults: Individualized Decision-Making and Communication Strategies. <em>Med Clin North Am</em>. 2020;104(6):989-1006. doi: <a class="text-blue-700 underline" href="https://doi.org/10.1016/j.mcna.2020.08.002">10.1016/j.mcna.2020.08.002</a>. PMCID: PMC7594102.</li>
@@ -285,7 +285,7 @@
 <li>Pereira LFF, et al. Lung cancer screening in Brazil: recommendations from Brazilian societies. <em>J Bras Pneumol</em>. 2024;50(1):e20230233. doi: <a class="text-blue-700 underline" href="https://doi.org/10.36416/1806-3756/e20230233">10.36416/1806-3756/e20230233</a>. PMCID: PMC11095927.</li>
 <li>Pilleron S, Sarfati D, Janssen-Heijnen M, et al. Global cancer incidence in older adults, 2012 and 2035. <em>Int J Cancer</em>. 2019;144(1):49-58. doi: <a class="text-blue-700 underline" href="https://doi.org/10.1002/ijc.31664">10.1002/ijc.31664</a>.</li>
 <li>Qaseem A, Harrod CS, Crandall CJ, Wilt TJ; ACP. Screening for Colorectal Cancer in Asymptomatic Average-Risk Adults: Guidance Statement. <em>Ann Intern Med</em>. 2023;176(8):1092-1100. doi: <a class="text-blue-700 underline" href="https://doi.org/10.7326/M23-0779">10.7326/M23-0779</a>.</li>
-<li>Rockwood K, Song X, MacKnight C, Bergman H, Hogan DB, McDowell I, Mitnitski A. A global clinical measure of fitness and frailty in elderly people. CMAJ. 2005 Aug 30;173(5):489-95. doi: 10.1503/cmaj.050051. PMID: 16129869; PMCID: PMC1188185.</li>
+<li>Rockwood K, Song X, MacKnight C, Bergman H, Hogan DB, McDowell I, Mitnitski A. A global clinical measure of fitness and frailty in elderly people. <em>CMAJ</em>. 2005;173(5):489–495. doi: <a class="text-blue-700 underline" href="https://doi.org/10.1503/cmaj.050051" target="_blank" rel="noopener">10.1503/cmaj.050051</a>. PMID: 16129869; PMCID: PMC1188185.</li>
 <li>Schoenborn NL, Massare J, Park R, et al. Assessment of Clinician Decision-making on Cancer Screening Cessation in Older Adults With Limited Life Expectancy. <em>JAMA Netw Open</em>. 2020;3(6):e206772. doi: <a class="text-blue-700 underline" href="https://doi.org/10.1001/jamanetworkopen.2020.6772">10.1001/jamanetworkopen.2020.6772</a>.</li>
 <li>Schoenborn NL, Lee K, Pollack CE, et al. Older Adults' Views and Communication Preferences About Cancer Screening Cessation. <em>JAMA Intern Med</em>. 2017;177(8):1121-1128. doi: <a class="text-blue-700 underline" href="https://doi.org/10.1001/jamainternmed.2017.1778">10.1001/jamainternmed.2017.1778</a>.</li>
 <li>Schoenborn NL, Bowman TL 2nd, Cayea D, et al. Primary Care Practitioners' Views on Incorporating Long-term Prognosis. <em>JAMA Intern Med</em>. 2016;176(5):671-678. doi: <a class="text-blue-700 underline" href="https://doi.org/10.1001/jamainternmed.2016.0670">10.1001/jamainternmed.2016.0670</a>.</li>
@@ -674,6 +674,7 @@ document.addEventListener('DOMContentLoaded', function(){
 
 </body>
 </html>
+
 
 
 
