--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <div class="mt-1 text-center text-gray-500 text-xs md:text-sm leading-relaxed">
 <div>
 <div class="mt-1">
-<strong>Discipline of Geriatrics and Gerontology, Department of Medicine. Paulista School of Medicine (EPM), Federal University of São Paulo (UNIFESP). São Paulo, Brasil.</strong>
+<strong>Discipline of Geriatrics and Gerontology, Department of Medicine. Paulista School of Medicine (EPM), Federal University of São Paulo (UNIFESP). São Paulo, Brazil.</strong>
     </div>
 <div class="mt-1">
 <strong>Authors:</strong> Marianne Wolff Rezende Teixeira, MD (UNIFESP); Matheus de Oliveira Barros, MD (UNIFESP); Gisele Wally Braga Colleoni, MD, PhD (UNIFESP)
@@ -674,6 +674,7 @@ document.addEventListener('DOMContentLoaded', function(){
 
 </body>
 </html>
+
 
 
 
