--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
 </div>
 </template>
 <footer class="mt-6 text-center text-xs text-gray-400">
-      We do not store any data. Prognostic tools support, never replace, clinical judgment. 
+      No data is stored or retained. Prognostic tools support—they do not replace—clinical judgment. 
 <section class="mt-8">
 <details class="bg-white rounded-lg shadow p-4">
 <summary class="cursor-pointer text-base font-semibold">References</summary>
@@ -717,5 +717,6 @@ document.addEventListener('DOMContentLoaded', function(){
 
 </body>
 </html>
+
 
 
