--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
 <p class="text-xs text-blue-800 font-medium">
   Intervention examples:
 </p>
-<p class="text-xs text-blue-700/80 mb-3 leading-snug">
+<p class="text-xs text-blue-700/60 mb-3">
   ©2025 American College of Lifestyle Medicine. All rights reserved. lifestylemedicine.org
 </p><div class="grid grid-cols-2 md:grid-cols-3 gap-6 md:gap-8 items-start justify-items-center text-center">
 
@@ -790,6 +790,7 @@ document.addEventListener('DOMContentLoaded', function(){
 
 </body>
 </html>
+
 
 
 
