--- a/index.html
+++ b/index.html
@@ -147,22 +147,63 @@ body.app-preview details.app-collapsible .app-muted {
   line-height: 1.35;
   margin-top: 8px;
 }
-</style>
-<!-- APP-ONLY STYLES END -->
+
+/* iOS/standalone support: when JS adds body.app-standalone */
+body.app-standalone .p-6 { padding: 14px !important; }
+body.app-standalone .p-4 { padding: 12px !important; }
+body.app-standalone .mt-6 { margin-top: 12px !important; }
+body.app-standalone .mt-8 { margin-top: 14px !important; }
+
+body.app-standalone h1 { font-size: 20px !important; line-height: 1.2 !important; }
+body.app-standalone h2 { font-size: 16px !important; line-height: 1.25 !important; }
+
+body.app-standalone div.mt-1.text-center.text-gray-500.text-xs.md\:text-sm.leading-relaxed { display: none !important; }
+
+body.app-standalone img { max-width: 100% !important; height: auto !important; }
+body.app-standalone img.app-scale-down { max-height: 220px !important; object-fit: contain !important; }
+body.app-standalone img.app-flowchart { max-height: 320px !important; object-fit: contain !important; }
+
+body.app-standalone details.app-collapsible {
+  border: 1px solid rgba(0,0,0,0.08);
+  border-radius: 12px;
+  padding: 10px 12px;
+  background: rgba(255,255,255,0.7);
+}
+body.app-standalone details.app-collapsible > summary {
+  cursor: pointer;
+  font-weight: 600;
+  color: rgba(0,0,0,0.70);
+  list-style: none;
+}
+body.app-standalone details.app-collapsible > summary::-webkit-details-marker { display: none; }
+body.app-standalone details.app-collapsible .app-muted {
+  color: rgba(0,0,0,0.55);
+  font-size: 12px;
+  line-height: 1.35;
+  margin-top: 8px;
+}
+
+\1
 <!-- ===================== -->
 
 </head>
 <body class="bg-gray-50 min-h-screen text-gray-800" x-data="fluxograma()">
 
+
 <script>
 (function(){
   try{
     const u = new URL(window.location.href);
-    const on = (u.searchParams.get("app") === "1") || (u.hash && u.hash.includes("app=1"));
-    if(on) document.body.classList.add("app-preview");
+    const preview = (u.searchParams.get("app") === "1") || (u.hash && u.hash.includes("app=1"));
+    if(preview) document.body.classList.add("app-preview");
+
+    const dm = (window.matchMedia && window.matchMedia("(display-mode: standalone)").matches);
+    const iosStandalone = (typeof navigator !== "undefined" && navigator.standalone === true); // iOS Add to Home Screen
+    if (dm || iosStandalone) document.body.classList.add("app-standalone");
   }catch{}
 })();
 </script>
+
 <a class="sr-only focus:not-sr-only focus:fixed focus:top-2 focus:left-2 bg-white border rounded px-3 py-2" href="#main">Skip to content</a><main id="main">
 <div class="max-w-6xl mx-auto px-4 py-6">
 <header class="mb-6">
@@ -1046,7 +1087,7 @@ document.addEventListener('DOMContentLoaded', function(){
 <!-- === APP-ONLY ENHANCEMENTS BEGIN === -->
 <script>
 (function () {
-  const isStandalone = (window.matchMedia && window.matchMedia("(display-mode: standalone)").matches) || document.body.classList.contains("app-preview");
+  const isStandalone = (window.matchMedia && window.matchMedia("(display-mode: standalone)").matches) || (typeof navigator !== "undefined" && navigator.standalone === true) || document.body.classList.contains("app-preview") || document.body.classList.contains("app-standalone");
   if (!isStandalone) return;
 
   // Collapse authors/collaborators into a <details>
